# modern-nextjs-django-jumpstarter-template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
backend/: Dockerfile  pyproject.toml
backend/src/: .env.example  .gitignore  backend-entrypoint.sh  beat-entrypoint.sh  celery-entrypoint.sh  conftest.py
backend/src/core/: backends.py  cache.py  choices.py  cron.py  decorators.py  definitions.py  enums.py  exceptions.py  fields.py  models.py  pagination.py  permissions.py  regex.py  registries.py  seeds.py  serializers.py  storages.py  tasks.py  urls.py  utils.py  validators.py  views.py
backend/src/core/adapters/nosql/: dynamodb.py
backend/src/core/adapters/object_storage/: IMPLEMENTATION_SUMMARY.md  README_GCS.md  __init__.py  async_gcs.py  async_s3.py  gcs.py  gcs_file.py  local.py  s3.py  s3file.py  sftp.py  test_gcs.py
backend/src/core/config/: __init__.py  cache.py  database.py  filtration.py  frontend.py  messaging.py  notification.py  sftp.py  short_url.py  storage.py  system.py
backend/src/core/fixtures/: fixtures_meta.json
backend/src/core/migrations/: 0001_initial.py  0002_initial.py
backend/src/example_project/: celery.py  settings.py  urls.py
backend/src/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/src/users/migrations/: 0001_initial.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  README.md
frontend/: .dockerignore  .npmrc  .prettierignore  .prettierrc  Dockerfile  eslint.config.mts  jest.config.js  jest.setup.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/public/i18n/locales/: en.json
frontend/scripts/: generate-api-schema.sh
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/auth/: layout.tsx
frontend/src/app/auth/forgot-password/: page.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/oauth/authorize/: page.tsx
frontend/src/app/auth/oauth/callback/: page.tsx
frontend/src/app/auth/register/: page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/app/home/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/terms/: page.tsx
frontend/src/components/admin/: AdminPanel.tsx
frontend/src/components/auth/: LoginForm.tsx  UserProfile.tsx
frontend/src/components/editor/: EditorJSEditor.tsx
frontend/src/components/layout/: Header.tsx  Navigation.tsx
frontend/src/components/profile/: AccountManagement.tsx  AvatarUploader.tsx  LearningPreferences.stub.tsx  LearningPreferences.tsx  NotificationSettings.tsx  PrivacySettings.tsx  ProfileBasicInfo.tsx  ProfileSettings.stub.tsx  ProfileSettings.tsx  SecuritySettings.tsx  index.ts
frontend/src/components/providers/: I18nProvider.tsx
frontend/src/components/ui/: ConstellationTutorial.tsx  EditorJSEditor.tsx  EditorJSViewer.tsx  EditorJSViewerSafe.tsx  FirstTimeHint.tsx  GenericGUI.tsx  LanguageSelector.tsx  animated-components.tsx  badge.tsx  big-calendar.css  big-calendar.tsx  breadcrumb.tsx  button.tsx  context-menu.tsx  futuristic-button-demo.tsx  image-upload.tsx  lesson-scheduler.tsx  navigation-menu.tsx  page-transition.tsx  progress.tsx  session-scheduler.tsx  sidebar.tsx  slider.tsx  toast.tsx
frontend/src/contexts/: AuthContext.tsx  GUIContext.tsx  ThemeContext.tsx
frontend/src/hooks/: use-debounced-button.ts  use-toast.ts  useI18nInit.ts  useStorage.ts  useTitles.ts
frontend/src/lib/: animations.ts  api-client.ts  api.ts  constants.ts  i18n.ts  imageLoader.ts  imageUtils.ts  mock-data.ts  publishValidation.ts  utils.ts
frontend/src/lib/types/: api.ts
frontend/src/services/: apiService.ts  authService.ts  imageService.ts  storageService.ts  userService.ts
frontend/src/types/: api.ts  index.ts  json.d.ts
